--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@pyxeldev/blackscreen",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Just a black web page",
   "author": "Kevin Py",
   "license": "MIT",
-  "keywords": ["black", "screen", "app"]
+  "keywords": [
+    "black",
+    "screen",
+    "app"
+  ]
 }
