--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pyxeldev/blackscreen",
+  "name": "blackscreen",
   "version": "1.1.0",
   "description": "Just a black web page",
   "author": "Kevin Py",
